php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36303 foreach on error_zval produces segfault
Submitted: 2006-02-06 12:37 UTC Modified: 2006-02-06 12:56 UTC
From: dmitry at zend dot com Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2006-02-06 (CVS) OS: *
Private report: No CVE-ID: None
 [2006-02-06 12:37 UTC] dmitry at zend dot com
Description:
------------
PHP crashes on the following code:

Reproduce code:
---------------
<?php
$x='data';
foreach($x->a->b as $v) {
}
echo "ok\n";
?>

Expected result:
----------------
ok

Actual result:
--------------
Segmentation fault


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-02-06 12:56 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC