Fixed bug #36303 (foreach on error_zval produces segfault)